feat: deploying triangle

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <title>Learn WGPU</title>
     <style>
         canvas {
-            background-color: black;
+            background-color: white;
         }
+
+	body {
+	    display: flex;
+	    align-items: center;
+	    justify-content: center;
+	    height: 100%;
+	}
     </style>
 </head>
 
